# project-gitodrile

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/adr/: README.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
work/: README.md  backlog.md
work/active/: 001-open-local-repository.md  002-detect-git-version.md
work/blocked/: .gitkeep
work/done/: .gitkeep  001-open-local-repository.md  002-detect-git-version.md
work/templates/: task.md
