[package]
name = "gitodrile"
version = "0.1.0"
description = "A friendly Git desktop client"
authors = ["Luis M. Martínez"]
edition = "2021"

[lib]
name = "gitodrile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
